# qrust

./: Cargo.toml  README.md
migrations/2019-11-05-002543_create_posts/: up.sql
migrations/2020-02-02-060159_create_people/: up.sql
src/: main.rs  schema.rs
src/db/: database.rs
src/graphql/: definitions.rs  graphql.rs  mod.rs  roots.rs
src/resources/: resources.rs
src/schemas/: schemas.rs
