[package]
name = "qrust"
version = "0.1.0"
authors = ["Matt Young <dev@mttyng.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.8"
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
futures = "0.1.28"
juniper = "0.14.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
